@@ -14,7 +14,6 @@ import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.openqa.selenium.By;
-import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
@@ -42,162 +41,220 @@ public class PlayerScoreCrawlerService {
 
     private void crawlPitcher() {
         WebDriver driver = createChromeDriver();
+
+        //투수목록
         List<Player> pitchers = playerRepository.findAll().stream()
                 .filter(player -> player.getPosition().getName().contains("투수"))
-                .toList();
+                .collect(Collectors.toList());
 
         try {
             driver.get("https://www.koreabaseball.com/Player/Search.aspx");
 
+            //투수
             for (Player pitcher : pitchers) {
-                Select positionDropdown = new Select(waitForElement(By.id("cphContents_cphContents_cphContents_ddlPosition"), driver, 5));
-                positionDropdown.selectByVisibleText("투수");
+                // 1. 선수 이름 검색창에 입력
 
-                WebElement searchBox = waitForElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"), driver, 5);
+                // 포지션 드롭다운에서 '투수' 선택
+                Select positionDropdown = new Select(driver.findElement(By.id("cphContents_cphContents_cphContents_ddlPosition")));
+                positionDropdown.selectByVisibleText("투수");
+                Thread.sleep(2000); // 검색창에서 처리 시간 대기
+
+                WebElement searchBox = driver.findElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"));
                 searchBox.clear();
                 searchBox.sendKeys(pitcher.getName());
+                Thread.sleep(1000); // 검색창에서 처리 시간 대기
 
-                WebElement searchButton = waitForElement(By.id("cphContents_cphContents_cphContents_btnSearch"), driver, 5);
+                // 2. 검색 버튼 클릭
+                WebElement searchButton = driver.findElement(By.id("cphContents_cphContents_cphContents_btnSearch"));
                 searchButton.click();
+                Thread.sleep(2000); // 검색 결과가 나오도록 대기
 
-                WebElement playerLink = waitForElement(By.cssSelector("#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody > tr > td:nth-child(2) > a"), driver, 5);
+                // 3. 해당 선수의 링크 클릭하여 상세 페이지로 이동
+                WebElement playerLink = driver.findElement(By.cssSelector("#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody > tr > td:nth-child(2) > a"));
                 playerLink.click();
+                Thread.sleep(2000); // 상세 페이지가 로드될 시간을 대기
+                // 4. 상세 페이지에서 원하는 정보 가져오기
 
-                WebElement row = waitForElement(By.cssSelector("#contents > div.sub-content > div.player_records > div.tbl-type02.tbl-type02-pd0.mb35 > table > tbody > tr"), driver, 5);
-                String era = row.findElement(By.cssSelector("td:nth-child(2)")).getText();
-                String g = row.findElement(By.cssSelector("td:nth-child(3)")).getText();
+                //능력치 가져오기
+                WebElement row = driver.findElement(By.cssSelector("#contents > div.sub-content > div.player_records > div.tbl-type02.tbl-type02-pd0.mb35 > table > tbody > tr"));
 
-                row = waitForElement(By.cssSelector("#contents > div.sub-content > div.player_records > div:nth-child(4) > table > tbody > tr"), driver, 5);
-                String so = row.findElement(By.cssSelector("td:nth-child(5)")).getText();
-                String whip = row.findElement(By.cssSelector("td:nth-child(11)")).getText();
-                String avg = row.findElement(By.cssSelector("td:nth-child(12)")).getText();
-                String qs = row.findElement(By.cssSelector("td:nth-child(13)")).getText();
+                //세부 능력치 가져오기
+                String era = row.findElement(By.cssSelector("td:nth-child(2)")).getText();  // ERA
+                String g = row.findElement(By.cssSelector("td:nth-child(3)")).getText();    // G
 
-                Double score = calculateOverallPitcherScore(Double.valueOf(era), Double.valueOf(whip), Integer.valueOf(so), Integer.valueOf(g), Double.valueOf(avg), Integer.valueOf(qs));
+                //두번째 표
+                row = driver.findElement(By.cssSelector("#contents > div.sub-content > div.player_records > div:nth-child(4) > table > tbody > tr"));
+                String so = row.findElement(By.cssSelector("td:nth-child(5)")).getText(); // SO
+                String whip = row.findElement(By.cssSelector("td:nth-child(11)")).getText(); // WHIP
+                String avg = row.findElement(By.cssSelector("td:nth-child(12)")).getText(); // AVG
+                String qs = row.findElement(By.cssSelector("td:nth-child(13)")).getText(); // QS
+
+                Double score = calculateOverallPitcherScore(Double.valueOf(era),Double.valueOf(whip),Integer.valueOf(so),Integer.valueOf(g),Double.valueOf(avg),Integer.valueOf(qs));
                 pitcher.updateScore(score);
 
+                // 5. 상세 페이지에서 데이터 추출 후 첫 페이지로 돌아가기
                 driver.navigate().back();
-                waitForElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"), driver, 5);
+                Thread.sleep(2000); // 페이지가 돌아오는 시간 대기
             }
 
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
         } finally {
-            driver.quit();
+            driver.quit(); // 리소스 정리
         }
     }
 
     private void crawlCatcher() {
         WebDriver driver = createChromeDriver();
+        //투수 제외 모두 선택
         List<Player> players = playerRepository.findAll().stream()
                 .filter(player -> !player.getPosition().getName().contains("투수"))
                 .toList();
 
         try {
-
             driver.get("https://www.koreabaseball.com/Player/Search.aspx");
 
+            //포수
             for (Player player : players) {
-                Select positionDropdown = new Select(waitForElement(By.id("cphContents_cphContents_cphContents_ddlPosition"), driver, 5));
+                // 1. 선수 이름 검색창에 입력
 
-                String positionText = switch (player.getPosition()) {
-                    case CATCHER -> "포수";
-                    case OUT_FIELD -> "외야수";
-                    default -> "내야수";
-                };
-                positionDropdown.selectByVisibleText(positionText);
+                Select positionDropdown = new Select(driver.findElement(By.id("cphContents_cphContents_cphContents_ddlPosition")));
+                if (player.getPosition() == Position.CATCHER) {
+                    positionDropdown.selectByVisibleText("포수");
+                    Thread.sleep(2000); // 검색창에서 처리 시간 대기
 
-                WebElement searchBox = waitForElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"), driver, 5);
-                searchBox.clear();
-                searchBox.sendKeys(player.getName());
+                    WebElement searchBox = driver.findElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"));
+                    searchBox.clear();
+                    searchBox.sendKeys(player.getName());
+                    Thread.sleep(1000); // 검색창에서 처리 시간 대기
 
-                WebElement searchButton = waitForElement(By.id("cphContents_cphContents_cphContents_btnSearch"), driver, 5);
-                searchButton.click();
-
-                try {
-                    WebElement tbody = waitForElement(By.cssSelector("#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody"), driver, 3);
-                    List<WebElement> rows = tbody.findElements(By.tagName("tr"));
-                    if (rows.isEmpty()) {
-                        String altPos = positionText.equals("외야수") ? "내야수" : "외야수";
-                        positionDropdown = new Select(waitForElement(By.id("cphContents_cphContents_cphContents_ddlPosition"), driver, 5));
-                        positionDropdown.selectByVisibleText(altPos);
-                        searchBox = waitForElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"), driver, 5);
-                        searchBox.clear();
-                        searchBox.sendKeys(player.getName());
-                        searchButton = waitForElement(By.id("cphContents_cphContents_cphContents_btnSearch"), driver, 5);
-                        searchButton.click();
-                    }
-                } catch (TimeoutException ignored) {
-                    continue;
+                    // 2. 검색 버튼 클릭
+                    WebElement searchButton = driver.findElement(By.id("cphContents_cphContents_cphContents_btnSearch"));
+                    searchButton.click();
+                    Thread.sleep(2000); // 검색 결과가 나오도록 대기
                 }
 
-                WebElement playerLink = waitForElement(By.cssSelector("#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody > tr > td:nth-child(2) > a"), driver, 5);
+                //야수
+                else {
+                    // 포지션 드롭다운에서 포지션 선택
+                    String pos = player.getPosition() == Position.OUT_FIELD ? "외야수" : "내야수";
+                    positionDropdown.selectByVisibleText(pos);
+                    Thread.sleep(2000); // 검색창에서 처리 시간 대기
+
+                    WebElement searchBox = driver.findElement(
+                            By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"));
+                    searchBox.clear();
+                    searchBox.sendKeys(player.getName());
+                    Thread.sleep(1000); // 검색창에서 처리 시간 대기
+
+                    // 2. 검색 버튼 클릭
+                    WebElement searchButton = driver.findElement(
+                            By.id("cphContents_cphContents_cphContents_btnSearch"));
+                    searchButton.click();
+                    Thread.sleep(2000); // 검색 결과가 나오도록 대기
+
+                    //포지션 변경 등 이유로 검색되지 않을 경우
+                    WebElement tbody = driver.findElement(By.cssSelector(
+                            "#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody"));
+                    List<WebElement> rows = tbody.findElements(By.tagName("tr"));
+
+                    if (rows.isEmpty()) {
+                        if (pos.equals("외야수")) {
+                            // 내야수로 드롭다운 변경
+                            positionDropdown = new Select(
+                                    driver.findElement(By.id("cphContents_cphContents_cphContents_ddlPosition")));
+                            positionDropdown.selectByVisibleText("내야수");
+                            Thread.sleep(1000);
+                        }
+                        if (pos.equals("내야수")) {
+                            // 외야수로 드롭다운 변경
+                            positionDropdown = new Select(
+                                    driver.findElement(By.id("cphContents_cphContents_cphContents_ddlPosition")));
+                            positionDropdown.selectByVisibleText("외야수");
+                            Thread.sleep(1000);
+                        }
+
+                        // 검색 다시 수행
+                        searchBox = driver.findElement(
+                                By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"));
+                        searchBox.clear();
+                        searchBox.sendKeys(player.getName());
+                        Thread.sleep(1000);
+
+                        searchButton = driver.findElement(By.id("cphContents_cphContents_cphContents_btnSearch"));
+                        searchButton.click();
+                        Thread.sleep(2000);
+                    }
+                }
+
+                // 3. 해당 선수의 링크 클릭하여 상세 페이지로 이동
+                WebElement playerLink = driver.findElement(By.cssSelector("#cphContents_cphContents_cphContents_udpRecord > div.inquiry > table > tbody > tr > td:nth-child(2) > a"));
                 playerLink.click();
+                Thread.sleep(2000); // 상세 페이지가 로드될 시간을 대기
+                // 4. 상세 페이지에서 원하는 정보 가져오기
 
-                WebElement row = waitForElement(By.cssSelector("#contents > div.sub-content > div.player_records > div.tbl-type02.tbl-type02-pd0.mb35 > table > tbody > tr"), driver, 5);
-                String avg = row.findElement(By.cssSelector("td:nth-child(2)")).getText();
-                String hr = row.findElement(By.cssSelector("td:nth-child(10)")).getText();
-                String rbi = row.findElement(By.cssSelector("td:nth-child(12)")).getText();
+                //능력치 가져오기
+                WebElement row = driver.findElement(By.cssSelector("#contents > div.sub-content > div.player_records > div.tbl-type02.mb10 > table > tbody > tr\n"));
 
-                row = waitForElement(By.cssSelector("#contents > div.sub-content > div.player_records > div:nth-child(4) > table > tbody > tr"), driver, 5);
-                String ops = row.findElement(By.cssSelector("td:nth-child(11)")).getText();
-                String so = row.findElement(By.cssSelector("td:nth-child(4)")).getText();
-                String gdp = row.findElement(By.cssSelector("td:nth-child(5)")).getText();
+                //세부 능력치 가져오기
+                String avg = row.findElement(By.cssSelector("td:nth-child(2)")).getText();  // AVG
+                String hr = row.findElement(By.cssSelector("td:nth-child(10)")).getText();    // hr
+                String rbi = row.findElement(By.cssSelector("td:nth-child(12)")).getText();    // rbi
 
-                Double score = calculateOffensiveScore(Double.valueOf(avg), Integer.valueOf(hr), Integer.valueOf(rbi),
-                        Double.valueOf(ops), Integer.valueOf(so), Integer.valueOf(gdp));
+                //두번째 표
+                row = driver.findElement(By.cssSelector("#contents > div.sub-content > div.player_records > div:nth-child(4) > table > tbody > tr"));
+
+                String ops = row.findElement(By.cssSelector("td:nth-child(11)")).getText(); // ops
+                String so = row.findElement(By.cssSelector("td:nth-child(4)")).getText(); // so
+                String gdp = row.findElement(By.cssSelector("td:nth-child(5)")).getText(); // gdp
+
+                Double score = calculateOffensiveScore(Double.valueOf(avg),Integer.valueOf(hr),Integer.valueOf(rbi),
+                        Double.valueOf(ops),Integer.valueOf(so),Integer.valueOf(gdp));
 
                 player.updateScore(score);
+                System.out.println(player);
+
+                // 5. 상세 페이지에서 데이터 추출 후 첫 페이지로 돌아가기
                 driver.navigate().back();
-                waitForElement(By.id("cphContents_cphContents_cphContents_txtSearchPlayerName"), driver, 5);
+                Thread.sleep(2000); // 페이지가 돌아오는 시간 대기
             }
+        }
+        catch (InterruptedException e) {
+            throw new RuntimeException(e);
         } finally {
-            driver.quit();
+            driver.quit(); // 리소스 정리
         }
     }
 
 
     //투수 점수 계산
     private double calculateOverallPitcherScore(double era, double whip, int so, int g, double avg, int qs) {
-        // 1. 이닝당 삼진 비율 (K/9 기준)
-        double kPer9 = (so / (double) g) * 9;
-        double pwr = Math.max(0, Math.min((kPer9 - 3.0) / 10.0 * 100, 100));
+        double pwr = Math.min(so / (double) g * 10, 100); // 구위
+        double ctl = Math.max(100 - era * 20, 0);         // 제구
+        double clt = Math.min(qs / (double) g * 100, 100); // 위기관리
+        double hitAvoid = Math.max(100 - avg * 100, 0);   // 피안타 회피
+        double mental = Math.max(100 - (32.0 / so) * 100, 0); // 멘탈 (실점 대비 삼진)
+        double var = Math.max(100 - whip * 20, 0);        // 변화구 제구력 (WHIP 기반)
 
-        // 2. ERA: 0.00 ~ 5.00 기준
-        double ctl = Math.max(0, Math.min((5.0 - era) / 5.0 * 100, 100));
-
-        // 3. QS 비율
-        double clt = Math.max(0, Math.min(qs / (double) g * 100, 100));
-
-        // 4. 피안타율: 0.300 ~ 0.200 기준
-        double hitAvoid = Math.max(0, Math.min((0.300 - avg) / 0.100 * 100, 100));
-
-        // 5. 삼진 수 (멘탈): 0 ~ 200 기준
-        double mental = Math.max(0, Math.min(so / 200.0 * 100, 100));
-
-        // 6. WHIP: 1.5 ~ 0.8 기준
-        double var = Math.max(0, Math.min((1.5 - whip) / 0.7 * 100, 100));
-
-        // 가중치 합산 (총합 = 1.0)
-        double total = pwr * 0.25
-                + ctl * 0.25
-                + clt * 0.20
-                + hitAvoid * 0.15
-                + mental * 0.10
-                + var * 0.05;
-
-        return Math.round(total * 100.0) / 100.0;
+        return Math.round((
+                pwr * 0.25 +
+                        ctl * 0.25 +
+                        clt * 0.20 +
+                        hitAvoid * 0.15 +
+                        mental * 0.10 +
+                        var * 0.05
+        ) * 100.0) / 100.0;
     }
 
     //야수 & 포수 능력치 계산
     public double calculateOffensiveScore(double avg, int hr, int rbi, double ops, int so, int gdp) {
-        // 정규화된 값 (0~100)
-        double contact = Math.max(0, Math.min((avg - 0.200) / 0.150 * 100, 100));         // 타율 0.200~0.350
-        double power = Math.min(hr / 60.0 * 100, 100);                                     // 최대 60홈런 기준
-        double clutch = Math.min(rbi / 120.0 * 100, 100);                                  // 최대 120타점 기준
-        double productivity = Math.max(0, Math.min((ops - 0.500) / 0.700 * 100, 100));     // OPS 0.5~1.2
-        double discipline = Math.max(0, (1 - so / 200.0) * 100);                           // 0~200삼진 기준
-        double smartPlay = Math.max(0, (1 - gdp / 30.0) * 100);                            // 0~30병살 기준
+        double contact = avg * 100;
+        double power = hr * 2;
+        double clutch = rbi * 0.5;
+        double productivity = ops * 50;
+        double discipline = Math.max(100 - so * 0.2, 0);
+        double smartPlay = Math.max(100 - gdp * 0.5, 0);
 
-        // 가중치 합산
         double total = contact * 0.20
                 + power * 0.20
                 + clutch * 0.15
@@ -223,10 +280,4 @@ public class PlayerScoreCrawlerService {
 
         return new ChromeDriver(options);
     }
-
-    private WebElement waitForElement(By by, WebDriver driver, int seconds) {
-        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(seconds));
-        return wait.until(ExpectedConditions.presenceOfElementLocated(by));
-    }
-
 }
